src/objects/promotion__c.object
<CustomObject>
    <fields>
        <fullName>Field10__c</fullName>
        <formula>Field8__c  +  Field7__c  +  Field6__c  +  Field5__c  +  Field9__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>年度技术总结（篇）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <label>年度</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2018年</fullName>
                </value>
                <value>
                    <fullName>2017年</fullName>
                </value>
                <value>
                    <fullName>2016年</fullName>
                </value>
                <value>
                    <fullName>2015年</fullName>
                </value>
                <value>
                    <fullName>2014年</fullName>
                </value>
                <value>
                    <fullName>2011年</fullName>
                    <isActive>false</isActive>
                    <label>2011年</label>
                </value>
                <value>
                    <fullName>2012年</fullName>
                    <isActive>false</isActive>
                    <label>2012年</label>
                </value>
                <value>
                    <fullName>2013年</fullName>
                    <isActive>false</isActive>
                    <label>2013年</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>职称</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>E5-技术专家(TE)</fullName>
                </value>
                <value>
                    <fullName>E4+ -高级技术支持工程师(STSE)</fullName>
                </value>
                <value>
                    <fullName>E4-高级技术支持工程师(STSE)</fullName>
                </value>
                <value>
                    <fullName>E3+ -技术支持工程师(TSE)</fullName>
                </value>
                <value>
                    <fullName>E3-技术支持工程师(TSE)</fullName>
                </value>
                <value>
                    <fullName>E2+ -高级设备维护工程师(SFSE)</fullName>
                </value>
                <value>
                    <fullName>E2-高级设备维护工程师(SFSE)</fullName>
                </value>
                <value>
                    <fullName>E1+ -设备维护工程师(FSE)</fullName>
                </value>
                <value>
                    <fullName>E1-设备维护工程师(FSE)</fullName>
                </value>
                <value>
                    <fullName>E0-未评级</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>engineerrecord1__c</fullName>
        <label>工程师档案管理</label>
        <referenceTo>gcsdagl__c</referenceTo>
        <relationshipName>engineerrecord</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>工程师职级历史</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>全部</label>
    </listViews>
    <nameField>
        <displayFormat>P-{000000}</displayFormat>
        <label>序号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>工程师职级历史</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>